Footer alignment fix

--- a/src/css/base/layout.scss
+++ b/src/css/base/layout.scss
@@ -8,4 +8,6 @@ footer {
   position: fixed;
   width: 100%;
   bottom: 0;
+  left: 0;
+  right: 0;
 }
